--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -662,7 +662,7 @@ These absorbing states can be equated to fixation of single strategy.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{RPS_FP.pdf}
-    \caption{In a finite population of size $N = 33$, with $10^4$ simulations and a zero-sum payoff matrix \eqref{eq:36}, the fixation probability of Rock is highest near the Rock-rich corner. This is because, under strong selection ($w = 1$), strategies with higher initial frequencies have greater chances to fixate. Since Rock starts in high abundance in this region, it dominates via replication advantage over time.}
+    \caption{In a finite population of size of $N = 33$ with $ 10^4$ simulations and a zero-sum RPS payoff matrix \eqref{eq:36}, the fixation probability of Rock is highest near the Rock-rich corner. Under strong selection $w=1$, fixation is determined primarily by payoff advantages rather than initial frequency alone. Near the Rock-rich corner, Rock not only has a numerical advantage but also gains high fitness from frequent wins against Scissors, enabling it to dominate and fixate with high probability.}
     \label{fig:6}
 \end{figure}
 
