--- a/Manuscript/references.bib
+++ b/Manuscript/references.bib
@@ -138,6 +138,147 @@ But we cannot even imagine how many factors a single honeybee takes into account
   publisher = {Elsevier},
 }
 
+@Article{Traulsen2021,
+  author    = {Traulsen, Arne and Sieber, Michael},
+  journal   = {Current Opinion in Microbiology},
+  title     = {Evolutionary ecology theory—microbial population structure},
+  year      = {2021},
+  pages     = {216--220},
+  volume    = {63},
+  publisher = {Elsevier},
+}
 
+@Article{Lieberman2005,
+  author    = {Lieberman, Erez and Hauert, Christoph and Nowak, Martin A},
+  journal   = {Nature},
+  title     = {Evolutionary dynamics on graphs},
+  year      = {2005},
+  number    = {7023},
+  pages     = {312--316},
+  volume    = {433},
+  publisher = {Nature Publishing Group UK London},
+}
+
+@Article{Lambert2014,
+  author    = {Lambert, Guillaume and Vyawahare, Saurabh and Austin, Robert H},
+  journal   = {Interface focus},
+  title     = {Bacteria and game theory: the rise and fall of cooperation in spatially heterogeneous environments},
+  year      = {2014},
+  number    = {4},
+  pages     = {20140029},
+  volume    = {4},
+  publisher = {The Royal Society},
+}
+
+@Article{Nowak2006,
+  author    = {Nowak, Martin A},
+  journal   = {science},
+  title     = {Five rules for the evolution of cooperation},
+  year      = {2006},
+  number    = {5805},
+  pages     = {1560--1563},
+  volume    = {314},
+  publisher = {American Association for the Advancement of Science},
+}
+
+@Article{Xavier2007,
+  author    = {Xavier, Joao B and Foster, Kevin R},
+  journal   = {Proceedings of the National Academy of Sciences},
+  title     = {Cooperation and conflict in microbial biofilms},
+  year      = {2007},
+  number    = {3},
+  pages     = {876--881},
+  volume    = {104},
+  publisher = {National Academy of Sciences},
+}
+
+@Article{Medina2024,
+  author    = {Medina, James and Larsen, Tyler and Queller, David C and Strassmann, Joan E},
+  journal   = {PeerJ},
+  title     = {In the social amoeba Dictyostelium discoideum, shortened stalks may limit obligate cheater success even when exploitable partners are available},
+  year      = {2024},
+  pages     = {e17118},
+  volume    = {12},
+  publisher = {PeerJ Inc.},
+}
+
+@Article{Fischman2011,
+  author    = {Fischman, Brielle J and Woodard, S Hollis and Robinson, Gene E},
+  journal   = {Proceedings of the National Academy of Sciences},
+  title     = {Molecular evolutionary analyses of insect societies},
+  year      = {2011},
+  number    = {supplement\_2},
+  pages     = {10847--10854},
+  volume    = {108},
+  publisher = {National Academy of Sciences},
+}
+
+@Article{Rankin2007,
+  author    = {Rankin, Daniel J and Bargum, Katja and Kokko, Hanna},
+  journal   = {Trends in ecology \& evolution},
+  title     = {The tragedy of the commons in evolutionary biology},
+  year      = {2007},
+  number    = {12},
+  pages     = {643--651},
+  volume    = {22},
+  publisher = {Elsevier},
+}
+
+@Article{Schluter2015,
+  author    = {Schluter, Jonas and Nadell, Carey D and Bassler, Bonnie L and Foster, Kevin R},
+  journal   = {The ISME journal},
+  title     = {Adhesion as a weapon in microbial competition},
+  year      = {2015},
+  number    = {1},
+  pages     = {139--149},
+  volume    = {9},
+  publisher = {Oxford University Press},
+}
+
+@Article{Diggle2007,
+  author    = {Diggle, Stephen P and Griffin, Ashleigh S and Campbell, Genevieve S and West, Stuart A},
+  journal   = {Nature},
+  title     = {Cooperation and conflict in quorum-sensing bacterial populations},
+  year      = {2007},
+  number    = {7168},
+  pages     = {411--414},
+  volume    = {450},
+  publisher = {Nature Publishing Group UK London},
+}
+
+@Article{Nowak2010,
+  author    = {Nowak, Martin A and Tarnita, Corina E and Antal, Tibor},
+  journal   = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+  title     = {Evolutionary dynamics in structured populations},
+  year      = {2010},
+  number    = {1537},
+  pages     = {19--30},
+  volume    = {365},
+  publisher = {The Royal Society},
+}
+
+@Article{Powers2011,
+  author    = {Powers, Simon T and Penn, Alexandra S and Watson, Richard A},
+  journal   = {Evolution},
+  title     = {The concurrent evolution of cooperation and the population structures that support it},
+  year      = {2011},
+  number    = {6},
+  pages     = {1527--1543},
+  volume    = {65},
+  publisher = {Blackwell Publishing Inc Malden, USA},
+}
+
+@Article{Hummert2014,
+  author    = {Hummert, Sabine and Bohl, Katrin and Basanta, David and Deutsch, Andreas and Werner, Sarah and Thei{\ss}en, G{\"u}nter and Schroeter, Anja and Schuster, Stefan},
+  journal   = {Molecular BioSystems},
+  title     = {Evolutionary game theory: cells as players},
+  year      = {2014},
+  number    = {12},
+  pages     = {3044--3065},
+  volume    = {10},
+  publisher = {Royal Society of Chemistry},
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
+
+
