--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -69,7 +69,7 @@
 \newcommand{\cha}[1]{\textcolor{darkgreen}{(#1)}}
 
 
-\title{\vspace*{-22mm}\bf Application of Evolutionary Game Theory in Biological Systems}
+\title{\vspace*{-22mm}\bf Evolutionary Game Theory for Understanding Biological Evolution}
 %\author{Chaitanya S. Gokhale$^{1}$, Joseph Bulbulia$^{2,3}$, Marcus Frean$^{4}$\\
 %\normalsize $^1$Research Group for Theoretical Models of Eco-evolutionary Dynamics\\
 %\normalsize Department of Evolutionary Theory, \\
@@ -97,20 +97,21 @@ Keywords:
 
 
 \tableofcontents
-\section{Abstract}
 \section{Introduction}
 One of the most important part of evolutionary biology revolves around the basic concept of cooperation. Cooperation is required to build new dimensions of biological organization. Cooperation forms the basis of the emergence of genomes, cells, multi-cellular organisms, social insects and human society. Cooperation implies that selfish replicators are willing to sacrifice a part of their reproductive capacity so that they can assist others \citep{Nowak2006}.
 Studies suggest that bacterial colonies which form biofilm require high level of cooperation because secreted extracellular polymeric material is a shared resource and can be advantageous to entire bacterial colonies \citep{Xavier2007}. In case of \textit{Dictyostelium discoideum}, also known as social amoeba, where some of the cells become self-sacrificing to create supportive stalks in which a colony of spores propagates \citep{Medina2024}. Also, social insects showing extreme cooperative specialization whereby workers sacrifice their own reproduction in order to contribute to the overall colony's fitness \citep{Fischman2011}.\\
 Despite of having evolutionary advantage, cooperation is quite unfavourable in real world systems because when people have an individual self interest, they would likely exceed the amount of collective resource available (Tragedy of commons) or short-term gain through defection is more tempting in real world scenarios \citep{Rankin2007}.
 In the biological context, this effect can lead to the public goods dilemma, which means cooperative interactions produce benefits that are distributed among all group members, defectors can enjoy such benefits without necessarily paying the costs that are involved in their creation. 
 Let's take examples of bacterial communities, in an experimental study  \textit{Vibrio cholerae} cheater cells can impose experimental benefits of costly extracellular enzymes synthesized by cooperators by evolutionary time \citep{Schluter2015}, and also in a study it is shown that defector individuals of \textit{Pseudomonas aeruginosa} can avoid the expense of generating the QS signal or the cooperative behaviour that is coordinated by QS and but can use QS signal to propagate \citep{Diggle2007}.\\
-Population structure significantly influences the evolutionary dynamics by determining which individual interacts with whom. Real populations aren't well-mixed, instead spatial or social structures create non-random patterns of interaction, that can crucially effect the evolution of cooperation over defection. Structuring population spatially should resolve the cooperation dilemma by using spatial clustering and network reciprocity\citep{Nowak2010}. 
+Natural selection has five main ways of overcoming this obstacle and favoring cooperation, which are kin selection (cooperation among genetic kins), direct reciprocity (repeated encounters with the same individuals), indirect reciprocity (reputation-based cooperation), network reciprocity (spatial structure constraining interactions), and group selection (disproportionate success of groups).
+In this thesis, we're analysing population structure, which can significantly influences the evolutionary dynamics by determining which individual interacts with whom. Real populations aren't well-mixed, instead spatial or social structures create non-random patterns of interaction, that can crucially effect the evolution of cooperation over defection. Structuring population spatially should resolve the cooperation dilemma by using spatial clustering and network reciprocity\citep{Nowak2010}. 
 In a paper, Powers, Penn, and Watson demonstrate that the cooperation and population structure co-evolve together in a synergistic way\citep{Powers2011}.
 This thesis focuses on population structure as a promising pathway to understand cooperation-defection and to catalyse cooperation, since evolving population structure is a necessary parameter for the stability and evolution of cooperative behaviour. The simplest way to simulate a game in structured population through graphs is simulating the game in square lattice spatial structure.\\
 Evolutionary Game Theory is one of the most prominent mathematical framework, which can possibly explain these complex evolutionary dynamics by converting biological behaviours as strategic interacting games, where interaction payoffs determine fitness. Unlike classical game theory, evolutionary game theory focuses on evolution of strategy based on the reproductive success or fitness value. Prisoner's dilemma, an example of a game in EGT, shows that mutual cooperation yields comparatively higher collective payoff than the payoff for mutual defection, yet individual defection gives more high payoff when interacting with a cooperator, spreading defection in the population.
 Evolutionary Game Theory can be applied to different biological systems, starting from fermentation, cellular metabolic cooperation, biofilm formation, antibiotic resistance formation, cancer progression modeled as interaction between healthy and malignant cells or quorum sensing as cooperative interactions preventing exploitation while maintaining beneficial collective actions \citep{Hummert2014}.\\
 In this thesis, the evolutionary game theory is used to study how population structure facilitates cooperation in biological systems, and mathematical models and computational simulations are used to study the dynamics of cooperation-defection in the context of various spatial and social organization. This study seeks to contribute to the existing body of knowledge of cooperation in microbial ecology, cellular biology and other different biological systems by combining theoretical predictions with empirical examples to determine why cooperation is evolutionarily stable, and how to catalyse cooperation and to determine its key role in the evolution of biological organization.
-\section{Review of Literature}
+Our thesis starts with the discussion of the replicator dynamics or deterministic  dynamics, then proceeds through the stochastic dynamics and the section of evolutionary dynamics in the structured population.
+
 \section{Methodology}
 \subsection{Replicator Dynamics}
 \label{subsec:Replicator Dynamics}
@@ -279,6 +280,7 @@ Over time, $2/3$ of the population will hunt hare and the $1/3$ of the populatio
     \label{fig:3}
 \end{figure}
 \subsubsection{Two player games with multiple strategies}
+\label{subsubsec:Two player games with multiple strategies}
 In the previous subsection, we analysed two player games with two strategies, now we are going to analyse two player games with multiple strategies. For better understanding of this particular problem, let's take a biological example, strains of \textit{Escherichia coli} are competing for resources available on the media. $K$ strain is the killer strain which produces toxin that will out-compete strain $S$. So, having toxin or not are the two strategies, we can write this using two strategy payoff matrix but there can be another possibility, where strain $R$ is resistant to the toxin but pay the cost for resistance. So, the scenario now changed completely; now the payoff matrix will be $3 \times 3$. This study was carried out by\citep{Kerr2002}\citep{Czaran2002}.
 Now, in a population there will be multiple strategies. So, we have to write the replicator dynamics in $(n-1)$ dimensional simplex.For that we need $n\times n$ payoff matrix.
 \[
@@ -710,9 +712,7 @@ Then, the fixation probability is:
 \begin{equation}
 \rho_n = \frac{1 + \sum_{i=1}^{n-1} \prod_{j=1}^i[ r^{-1} \cdot \frac{(n-1)r + N - n}{n r + N - n - 1}]}{1 + \sum_{i=1}^{N-1} \prod_{j=1}^i[ r^{-1} \cdot \frac{(n-1)r + N - n}{n r + N - n - 1}]} \label{eq:54}
 \end{equation}
-\newline
-\textbf{Stag Hunt Game in Structured Population}
-\newline
+\subsubsection{Two-player game with two strategies in Structured Population}
 As discussed earlier in the subsubsection \ref{subsubsec:Two-player games with two strategies} of the subsection \ref{subsec:Replicator Dynamics}, stag hunt game is a classical example of game theory to understand the interplay between risk and trust. There are two strategies, cooperation and defection. The stag hunt game can be used to model how cooperation can persist when cooperators cluster locally in structured finite populations like biofilms, among microbial population \citep{Lambert2014}. 
 The simplest way to simulate a game in structured population through graphs is simulating the game in square lattice spatial structure.\\
 Let's write the payoff matrix for the stag hunt game,
@@ -739,6 +739,17 @@ then, the relative fitness of mutants for birth with respect to the wild types c
 r = \frac{f_C}{f_D} = \frac{1 - w + w \cdot \pi_C}{1 - w + w \cdot \pi_D} \label{eq:58}
 \end{equation}
 Now, if we apply the $Bd$ update mechanism in a population size of $N$, where there are $n$ mutants (cooperators) and $N_n$ wild types (defectors). Then, the transition probability of mutant number being increased by one and the transition probability of mutant number being decreased by one can be calculated using the equation \eqref{eq:50} and \eqref{eq:51}, where r = relative fitness = $\frac{1 - w + w \cdot \pi_C}{1 - w + w \cdot \pi_D}$. Now, we can calculate the fixation probability using the equation \eqref{eq:52}.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{SH_SP.pdf}
+    \caption{Spatial evolution of the stag hunt game over four time steps. Where the orange color denotes the defectors and the cyan color the cooperators.
+    At time step $0$, the cooperators are $70\%$ and defectors are $30\%$. 
+    At time step $1000$, the cooperators are $63.7\%$ and defectors are $36.3\%$. 
+    At time step $2000$, cooperators are $52.5\%$ and defectors are $47.5\%$. 
+    At time step $3000$, the cooperators are $39.8\%$ and defectors are $60.2\%$.}
+    \label{fig:6}
+\end{figure}
+
 
 
 
@@ -779,4 +790,3 @@ Appropriate computer code describing the model is available at
 
 
 \end{document}
-
